[project]
name = "four-word-heroname-generator"
version = "0.1.0"
description = "A command line program to generate random four-word names like Eldery Cyborg Samurai Lizards"
authors = [
    {name = "Ponttunen"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
